# hash

./: .gitignore  AGENTS.md  COVERAGE_AUDIT.md  Cargo.toml  README.md  SECURITY.md  operator.json
.beads/: issues.jsonl
.beads/.br_history/: issues.20260226_035521.jsonl
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: COVERAGE_AUDIT.md  PLAN.md
schema/: hash.v0.schema.json
src/: doctor.rs  lib.rs  main.rs
src/cli/: algorithm.rs  args.rs  exit.rs  mod.rs
src/hash/: blake3.rs  compute.rs  mod.rs  sha256.rs
src/output/: jsonl.rs  mod.rs  ordered.rs
src/pipeline/: enricher.rs  mod.rs  parallel.rs  reader.rs
src/progress/: mod.rs  reporter.rs
src/refusal/: codes.rs  mod.rs  payload.rs
src/witness/: ledger.rs  mod.rs  query.rs  record.rs
tests/: cli_contract.rs  doctor.rs  e2e_spine.rs  e2e_spine_compatibility.rs  golden_rules.rs  hash_engine.rs  io_failure_handling.rs  io_failure_skipped.rs  io_skipped_warning.rs  operator_describe.rs  ordered_output.rs  parallel_jobs.rs  pipeline_reader.rs  progress_output.rs  refusal_contract.rs  refusal_envelope.rs  run_outcomes.rs  scaffold_topology.rs  schema_output.rs  skipped_passthrough.rs  spine_compatibility.rs  upstream_skipped.rs  witness_append.rs  witness_behavior.rs  witness_query.rs
